Fix spacing up a bit more nicely

--- a/assets/99_app.css
+++ b/assets/99_app.css
@@ -72,14 +72,15 @@ section.graph {
 	padding: 0 1rem;
 	display: block;
 	position: relative;
-	top: -.6rem;
+	top: .25rem;
 	object-fit: contain;
     align-self: flex-start;
 }
 
 .footer p {
 	text-align: left;
-	line-height: 140%;
+	font-size: 1.1rem;
+	margin: 0 1rem 1rem;
 }
 
 .footer div.wrapped {
